// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ModalFooter > matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="px-6 py-4 flex justify-end gap-2"
  >
    Footer
  </div>
</DocumentFragment>
`;

exports[`ModalHeader > matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="px-6 pt-6 pb-2 text-lg font-semibold"
  >
    Header
  </div>
</DocumentFragment>
`;

exports[`ModalOverlay > matches snapshot 1`] = `
<DocumentFragment>
  <div
    aria-modal="true"
    role="presentation"
    tabindex="-1"
  >
    Overlay
  </div>
</DocumentFragment>
`;
